--- a/DCTSetting.csproj
+++ b/DCTSetting.csproj
@@ -38,7 +38,11 @@
     <Reference Include="CSkin">
       <HintPath>..\..\..\Asp.net_Compoent\CSkin 4.0\CSkin.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data">
+      <HintPath>..\..\..\Asp.net_Compoent\Mysql\v4.0\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\BusinessAccess.cs" />
+    <Compile Include="Code\DataAccess.cs" />
+    <Compile Include="Code\Models.cs" />
+    <Compile Include="Code\SQLHelper_MySql.cs" />
+    <Compile Include="Code\Utility.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
